fix: fix wrong color values in CSS

--- a/style/style.css
+++ b/style/style.css
@@ -4,10 +4,10 @@
 
   --bg-page: #BF897F;
   --bg-main: #DAC2B2;
-  --bg-input: #DAC2B2;
+  --bg-input: #F7F2E0;
 
   --accent-brown: #595046;
-  --text-white: #DAC2B2;
+  --text-white: #F7F2E0;
 }
 
 body {
